--- a/SearchEngine/src/main/webapp/styles.css
+++ b/SearchEngine/src/main/webapp/styles.css
@@ -12,16 +12,28 @@ button {
     cursor : pointer;
 }
 
-#clearHistory {
-    background-color : red;
-    color : white;
-}
-
 input[type = text] {
     width : 30%;
     border : 2px solid black;
     border-radius : 4px;
     padding : 8px 16px;
+}
+
+#clearHistory {
+    background-color : red;
+    color : white;
+}
+
+#main {
+    display : block;
+    position : absolute;
+    width : 100%;
+    height : 40%;
+    margin : auto;
+    top : 0;
+    bottom : 0;
+    right : 0;
+    left : 0;
 }
 
 .goHome {
